syntax = "proto3";
package services.bria.v1;

service BriaService {
  rpc XPubImport (XPubImportRequest) returns (XPubImportResponse) {}
  rpc WalletCreate (WalletCreateRequest) returns (WalletCreateResponse) {}
  rpc NewAddress (NewAddressRequest) returns (NewAddressResponse) {}
}

message XPubImportRequest {
  string name = 1;
  string xpub = 2;
  string derivation = 3;
}

message XPubImportResponse {
  string id = 1;
}

message WalletCreateRequest {
  string name = 1;
  repeated string xpub_refs = 2;
}

message WalletCreateResponse {
  string id = 1;
}

message NewAddressRequest {
  string wallet_name = 1;
}

message NewAddressResponse {
  string address = 1;
}
